--- a/yathaahhahah.html
+++ b/yathaahhahah.html
@@ -91,7 +91,7 @@ canvas#confetti{position:absolute;inset:0;pointer-events:none}
 <canvas id="confetti" width="1200" height="800"></canvas>
 
 <div class="stage">
-  <h1>Happy Birthday, my love ❤️</h1>
+  <h1>Happy Birthday my love, Shambhavi ❤️</h1>
   <p class="lead">Hey!! This is for you.</p>
   <button id="openCard" class="open-btn">Open your card</button>
 
@@ -165,3 +165,4 @@ canvas#confetti{position:absolute;inset:0;pointer-events:none}
 
 </body>
 </html>
+
